Css style added commit

--- a/src/components/LeftSideBar/LeftSideBar.scss
+++ b/src/components/LeftSideBar/LeftSideBar.scss
@@ -1,16 +1,17 @@
 .SideBar {
   //margin-top: 10px;
-  width: 80px;
+  width: 65px;
   height: 530px;
-  background-color: blueviolet;
+  background-color: rgb(71, 73, 163);
   color: white;
+  margin-left: 5px;
 }
 .SubComponent {
   //padding: 20px;
-  padding-top: 50px;
+  padding-top: 40px;
   text-align: center;
   font-weight: bold;
   align-items: center;
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   color: white;
 }
