--- a/src/components/SearchComponent/SearchField.scss
+++ b/src/components/SearchComponent/SearchField.scss
@@ -1,6 +1,7 @@
 .Search {
-  width: 360px;
-  padding: 15px;
-
-  margin-left: 5px;
+  width: 380px;
+  padding: 5px;
+  border: 1px solid rgb(223, 218, 218);
+  margin-left: 10px;
+  color: rgb(167, 156, 156);
 }
