--- a/src/components/TopNavBar/TopNavBar.scss
+++ b/src/components/TopNavBar/TopNavBar.scss
@@ -2,65 +2,93 @@
   overflow: hidden;
   background-color: white;
   display: flex;
-  margin-top: 5px;
+  margin-top: 0;
+  border-bottom: 1px solid rgb(223, 218, 218);
 }
-
-.topnav a {
+.logo {
   float: left;
   display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196f3;
-  width: 80px;
-
   color: white;
+  text-align: center;
+  background-color: blueviolet;
+  width: 65px;
+  margin-left: 5px;
+  padding-top: 15px;
+  padding-left: 10px;
+  display: flex;
 }
+p {
+  font-weight: bold;
+  color: blueviolet;
+  background-color: white;
+  padding-right: 4px;
+  padding-left: 4px;
+  margin-left: 5px;
+}
+// .topnav p {
+//   float: left;
+//   display: block;
+//   color: black;
+//   text-align: center;
+//   padding: 14px 16px;
+//   text-decoration: none;
+//   font-size: 17px;
+// }
+
+// .topnav p:hover {
+//   background-color: #ddd;
+//   color: black;
+// }
+
+// .topnav p.active {
+//   background-color: blueviolet;
+//   width: 65px;
+//   margin-left: 5px;
+//   color: white;
+//   text-align: center;
+
+//   font-size: 0.8rem;
+// }
 
 .topnav .search-container {
   float: none;
-  padding: 6px;
-  border: 0.5px solid white;
+  padding: 5px;
+  //border: 0.5px solid white;
+  width: 850px;
+  height: 50px;
+  margin-top: 0;
+  color: rgb(223, 218, 218);
 }
 
-.topnav input[type="text"] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
+// .topnav input[type="text"] {
+//   padding: 6px;
+//   margin-top: 8px;
+//   font-size: 17px;
 
-  border: 1px solid white;
-}
+//   border: 1px solid white;
+// }
 
 .topnav .search-container button {
-  float: right;
   padding: 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
+  margin-top: 5px;
+  //background: #ddd;
   font-size: 17px;
-  border: 1px solid white;
+  //border: 1px solid white;
   cursor: pointer;
 }
 
 .topnav .search-container button:hover {
   background: #ccc;
-  border: 1px solid white;
+  // border: 1px solid white;
 }
 
 .select {
   width: 360px;
   padding: 15px;
   margin-left: 1px;
+  border: none;
+  border-right: 1px solid rgb(223, 218, 218);
+  color: rgb(116, 112, 112);
 }
 
 @media screen and (max-width: 600px) {
@@ -80,4 +108,8 @@
   .topnav input[type="text"] {
     border: 1px solid #ccc;
   }
+}
+.notification {
+  margin-top: 15px;
+  color: blue;
 }
