--- a/src/components/TrackTruckCards/TrackCards.scss
+++ b/src/components/TrackTruckCards/TrackCards.scss
@@ -1,40 +1,110 @@
 .item {
-  width: 180px;
+  width: 185px;
   padding: 10px;
   background-color: rgba(111, 41, 97, 0.3);
-  border: 2px solid rgba(111, 41, 97, 0.5);
+  border: 1px solid rgba(252, 248, 251, 0.5);
   display: inline-block;
-  //vertical-align: middle;
   border-radius: 0.5rem;
-  height: 180px;
-  margin-left: 5px;
+  margin-left: 10px;
   margin-top: 10px;
+  height: 140px;
 }
 .bg-info1 {
-  background-color: mediumvioletred !important;
+  background-color: rgb(71, 73, 163) !important;
 }
 .bg-info2 {
-  background-color: mediumseagreen !important;
+  background-color: rgb(67, 175, 72) !important;
 }
 .bg-info3 {
-  background-color: grey !important;
+  background-color: rgba(197, 189, 189, 0.87) !important;
 }
 .bg-info4 {
-  background-color: black !important;
+  background-color: rgb(14, 13, 13) !important;
 }
 .bg-info5 {
-  background-color: red !important;
+  background-color: rgb(228, 65, 65) !important;
 }
 .bg-info6 {
-  background-color: lightblue !important;
+  background-color: rgb(117, 165, 180) !important;
 }
-hr {
-  margin-top: 1.2rem;
-  // margin-bottom: 1rem;
-  border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
+
 .text {
   display: flex;
   //float: right;
+}
+
+.trackedhrline {
+  display: flex;
+  margin-left: 15px;
+  margin-top: 5px;
+}
+hr.hrtracked {
+  border-top: 2px solid rgb(223, 218, 218);
+  width: 100%;
+  float: left;
+  margin-left: 5px;
+  margin-top: 35px;
+}
+.trackedtext {
+  font-size: 0.6rem;
+  font-weight: bold;
+  margin-top: 30px;
+  color: rgb(223, 218, 218);
+}
+hr.hruntracked {
+  border-top: 2px solid rgb(223, 218, 218);
+  width: 60%;
+  float: left;
+  margin-left: 5px;
+  margin-top: 35px;
+}
+.cardtext {
+  display: flex;
+  font-weight: bold;
+  color: white;
+  margin-top: 25px;
+}
+.cardtextno {
+  font-size: 1.2rem;
+}
+.cardtextamt {
+  font-size: 0.6rem;
+  margin-left: 100px;
+  margin-top: 10px;
+}
+hr.cardline {
+  /* margin-top: 1rem; */
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgb(223, 218, 218);
+}
+.cardtext1 {
+  display: flex;
+  font-weight: bold;
+  color: white;
+  margin-top: 20px;
+}
+.cardtext2 {
+  display: flex;
+
+  color: white;
+  margin-top: 0;
+}
+.cardno {
+  font-size: 0.6rem;
+}
+.cardno1 {
+  font-size: 0.6rem;
+  margin-left: 100px;
+}
+.titletext {
+  font-size: 0.6rem;
+
+  color: white;
+  float: left;
+  //margin-top: 25px;
+}
+.firstcard {
+  display: inline-block;
+  margin-top: 40px;
 }
