heighlited added commit

--- a/src/components/LeftSideBar/LeftSideBar.scss
+++ b/src/components/LeftSideBar/LeftSideBar.scss
@@ -15,3 +15,13 @@
   font-size: 0.6rem;
   color: white;
 }
+.SubComponent:active {
+  background-color: blue;
+}
+.SubComponent:hover {
+  background-color: darkblue;
+}
+// #active {
+//   background-color: blue;
+//   color: white;
+// }
