active link added commit

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -3,6 +3,7 @@
   flex-wrap: nowrap;
 
   text-align: center;
+  margin-top: 0;
 }
 
 .TrackInfocss {
@@ -11,5 +12,5 @@
 
 .span {
   display: inline;
-  margin-left: 40px;
+  margin-left: 120px;
 }
