--- a/src/components/TopNavBar/TopNavBar.scss
+++ b/src/components/TopNavBar/TopNavBar.scss
@@ -4,6 +4,7 @@
   display: flex;
   margin-top: 0;
   border-bottom: 1px solid rgb(223, 218, 218);
+  //position: fixed;
 }
 .logo {
   float: left;
