--- a/src/components/TruckInfo/TruckInfo.scss
+++ b/src/components/TruckInfo/TruckInfo.scss
@@ -3,6 +3,8 @@
   padding: 10px;
   // background-color: rgba(111, 41, 97, 0.3);
   border: 1px solid rgba(182, 177, 181, 0.5);
+  //border-left: 2px solid red;
+
   display: inline-block;
   vertical-align: middle;
   height: 190px;
@@ -18,7 +20,7 @@
   margin-left: 180px;
 }
 .title {
-  font-size: 1.2rem;
+  font-size: 1rem;
   float: left;
   font-weight: bold;
 }
@@ -28,6 +30,7 @@
 .value {
   font-size: 0.8rem;
   float: right;
+  display: flex;
   font-weight: bold;
 }
 .truckinfo {
@@ -48,4 +51,13 @@ div.a {
 }
 .driverdetails {
   margin-top: 15px;
+}
+.valuenum {
+  //border: 0.5px solid grey;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 8px;
+  padding-right: 8px;
+  background: rgb(243, 237, 237);
+  border-radius: 15px;
 }
