--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -12,7 +12,8 @@ ul {
 }
 .menubar {
   display: flex;
-  font-size: 1rem;
+  font-size: 0.9rem;
+  //   font-weight: bold;
 }
 li {
   float: left;
@@ -34,7 +35,10 @@ li a {
   text-decoration: none;
 }
 
-li a:hover:not(.active) {
+// li a:hover:not(.active) {
+//   background-color: grey;
+// }
+li a:hover {
   background-color: grey;
 }
 
@@ -52,6 +56,7 @@ li a:hover:not(.active) {
   margin-left: 10px;
   margin-bottom: 15px;
   height: 35px;
+  font-size: 0.8rem;
   color: rgb(148, 128, 236);
 }
 
@@ -63,7 +68,7 @@ li a:hover:not(.active) {
   text-align: center;
   padding: 06px 25px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 0.8rem;
   border-right: 1px solid #bbb;
   height: 35px;
 }
@@ -77,4 +82,11 @@ a {
   text-decoration: none;
   color: rgb(148, 128, 236);
   background-color: transparent;
+}
+.numbers {
+  font-size: 0.6rem;
+  display: inline-flex;
+  // justify-content: center;
+  align-items: center;
+  margin-left: 3px;
 }
